# cloud-fastapi-deployment

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 915ca5249ef8_initial_tables.py
app/: config.py  db.py  main.py  models.py  s3_service.py  schemas.py
app/routers/: categories.py  products.py
