[project]
name = "cloud-fastapi-deployment"
version = "1.0.0"
description = "Product Catalog API — FastAPI application deployed to AWS Cloud"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.43.10",
    "fastapi[standard]>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The project name (cloud-fastapi-deployment) doesn't match the package
# directory (app/), so we must tell hatchling where to find it explicitly.
[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
